--- a/assets/stylesheet/cssFile.css
+++ b/assets/stylesheet/cssFile.css
@@ -1,7 +1,7 @@
-.position{
+.headerPosition{
     position: relative;
-    left: 56%;
-    top: 12px;
+    left: 278px;
+    top: 10px;
 }
 
 .profile{
@@ -18,98 +18,204 @@
     left: 275px;
 }
 
-#footer{
-    position: absolute;
-    top: 80vh;
-
-    width: 98.75vw;
-    height: 58vh;
-
-    background-color: #3A0044;
+.card{
+    width: 320px;
+    height: 178px;
+    background-color: white;
+    margin: auto;
+    border: 0;
+    margin-bottom: 5px;
 }
 
-#h6Footer{
-    font-size: 11px;
-    position: absolute;
-    top: 312px;
-    width: 98.7vw;
+.cardText{
     text-align: center;
-    -webkit-text-fill-color: white;
+    -webkit-text-fill-color: purple;
+    margin: 25px;
 }
 
-footer>div>div>h1{
+/*card animation*/
+
+.card-container, .front, .back {
+    width: 20rem;
+    height: 10rem;
+}
+
+.back {
+    box-sizing: border-box;
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .25);
+
+    font-family: BlinkMacSystemFont, "Segoe UI", sans-serif;
+    font-size: 2rem;
+    color: #fff;
+    text-align: center;
+}
+
+.back {
+    background-image: linear-gradient(to right bottom, #590067, #590067);
+    width: 322px;
+    height: 162px;
+
+    font-size: 22px;
+    -webkit-text-fill-color: white;
+    font-weight: normal;
+    text-align: center;
+}
+
+.back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    overflow: hidden;
+    transition: transform .8s ease;
+}
+.back {
+    transform: rotateY(180deg);
+}
+.card-container:hover .front {
+    transform: rotateY(-180deg);
+}
+.card-container:hover .back {
+    transform: rotateY(0deg);
+}
+
+.card-container {
+    perspective: 75rem;
+}
+
+/*Search bar*/
+.searchBarParent{
     position: relative;
-    top: 15px;
-    text-align: center;
-    font-size: 48px;
-
-    -webkit-text-fill-color: white;
+    width: 95vw;
+    margin: 0;
 }
 
-footer>div>div>h4{
-    font-size: 23px;
-    -webkit-text-fill-color: white;
+#searchBar{
+    width: 81vw;
+    height: 50px;
+
+    position: absolute;
+    left: 10%;
+    top: 20px;
+}
+
+#searchInputField{
+    border-radius: 200px 0 0 200px;
+}
+
+.searchBtn{
+    border-radius: 200px;
     width: 150px;
-    position: relative;
-}
-
-#moreLink{
-    top: 61px;
-    left: 11%;
-}
-
-#primaryMenu{
-    top: 25px;
-    left: 45.5%;
-}
-
-#contactUs{
-    top: -11px;
-    left: 78%;
-}
-
-.h2Footer{
-    width: 240px;
+    background-color: purple;
     -webkit-text-fill-color: white;
-    font-size: 14px;
-    position: relative;
+    border: 0;
 }
 
-#moreLinkContent{
-    left: 11%;
-    top: 3%;
-}
-
-#primaryMenuContent{
-    left: 45.5%;
-    top: -10%;
-}
-
-#contactUsContent{
-    left: 78%;
-    top: -40.5%;
-}
-
-footer>div>div:nth-child(2){
+.OrderTitle{
     position: absolute;
-    bottom: 0;
-    width: 100vw;
+    top: 78px;
+    left: 49px;
+}
 
+.OrderTableHead{
+    background-color: #590067 !important;
     -webkit-text-fill-color: white;
-    text-align: center;
+}
+
+.orderTableBody{
+    background-color: #FBDFFF!important;
+    -webkit-text-fill-color: black;
+}
+
+.tableDiv{
+    position: relative;
+    top: 72px;
+    margin: auto;
+
+    width: 89vw;
+}
+
+.tableDiv{
+    max-height: 240px; /* Set the maximum height of the container */
+    overflow-y: auto; /* Enable vertical scrolling */
+}
+
+.tableDiv{
+    table-layout: fixed; /* Prevent the table from resizing its columns */
+    white-space: nowrap; /* Prevent text wrapping */
+    overflow-x: auto; /* Enable horizontal scrolling */
+    overflow-y: scroll;
+}
+
+#viewOrderBtnParent{
+    position: relative;
+    top: 78px;
+    left: 66px;
+    width: fit-content;
+}
+
+#mainDivF{
+    width: 100vw;
+    height: 65vh;
+    margin: 0;
+    background-color: #3A0044;
+
+    position: relative;
+    top: 98px;
+}
+
+#aboutUs{
+    -webkit-text-fill-color: white;
+    position: absolute;
+    top: 2%;
+    left: 42%;
+}
+
+#fDiv1{
+    -webkit-text-fill-color: white;
+    position: absolute;
+    top: 25%;
+    left: 15%;
+}
+
+#fDiv2{
+    -webkit-text-fill-color: white;
+    position: absolute;
+    top: 25%;
+    left: 45%;
+}
+
+#fDiv3{
+    -webkit-text-fill-color: white;
+    position: absolute;
+    top: 25%;
+    left: 72%;
+
+    width: fit-content;
+}
+
+#allRights{
+    position: absolute;
+    top: 90%;
+    left: 39%;
+    -webkit-text-fill-color: white;
 }
 
 #groStore{
-    -webkit-text-fill-color: white;
     position: absolute;
-    right: 150px;
-    top: 288px;
+    top: 84.5%;
+    left: 75%;
+    -webkit-text-fill-color: white;
+
+    font-size: 35px;
 }
 
-#socialMediaFooter{
+#socialMedia{
     position: absolute;
-    left: 105px;
-    top: 278px;
+    top: 84%;
+    left: 12%;
 }
 
 #facebook{
@@ -135,211 +241,160 @@ footer>div>div:nth-child(2){
     left: 28px;
 }
 
-#mainDiv{
-    position: relative;
-    padding: 0;
-}
-
-#footerMain{
-    position: relative;
-}
-
-#totalIncome{
-    position: absolute;
-    top: 10%;
-    left: 39%;
-}
-
-#totalOrder{
-    position: absolute;
-    top: 10%;
-    left: 9%;
-}
-
-#totalCustomer{
-    position: absolute;
-    top: 10%;
-    left: 70%;
-}
-
-.cards{
-    top: 28%;
-    background-color: white;
-    -webkit-text-fill-color: purple;
-    font-weight: bold;
-    border: 0 solid white;
-    height: 150px;
-    font-size: 30px;
-    text-align: center;
-}
-
-.cardTitle{
-    position: relative;
-    top: 20px;
-}
-
-#searchBar{
-    width: 81vw;
-    height: 50px;
-
-    position: absolute;
-    left: 8%;
-    top: 50px;
-}
-
-#searchInputField{
-    border-radius: 200px 0 0 200px;
-}
-
-.searchBtn{
-    border-radius: 200px;
-    width: 150px;
-    background-color: purple;
-    -webkit-text-fill-color: white;
-    border: 0;
-}
-
-#order{
-    position: absolute;
-    top: 82%;
-    left: 9%;
-}
-
-.tableDiv{
-    position: absolute;
-    top: 92%;
-    left: 9%;
-    width: 81vw;
-}
-
-.tableDiv{
-    max-height: 240px; /* Set the maximum height of the container */
-    overflow-y: auto; /* Enable vertical scrolling */
-}
-
-.tableDiv{
-    table-layout: fixed; /* Prevent the table from resizing its columns */
-    white-space: nowrap; /* Prevent text wrapping */
-    overflow-x: auto; /* Enable horizontal scrolling */
-    overflow-y: scroll;
-}
-
-.OrderTableHead{
-    background-color: #590067 !important;
-    -webkit-text-fill-color: white;
-}
-
-.orderTableBody{
-    background-color: #FBDFFF!important;
-    -webkit-text-fill-color: black;
-}
-
-.orderTableBtnPosition{}
-
-#viewOrderBtnParent{
-    position: relative;
-    top: 428px;
-    left: 122px;
-    width: 95vw;
-}
-
-#updateButtonDash{
-    position: absolute;
-
-}
-
-#removeButtonDash{
-    position: absolute;
-    left: 96px;
-}
-
-.h2Posi{
-    position: relative;
-    top: 27px;
-}
-
-.placeOrderForm{
-    position: absolute;
-    top: 118%;
-}
-
-.allCards{
-    position: relative;
-    width: 1350px;
-    height: 200px;
-}
-
-.searchBarParent{
-    position: relative;
-    width: 95vw;
+.margin{
     margin: 0;
 }
 
-#orderTableBtnParent{
+.padding{
+    padding: 0;
+}
+
+.position{
     position: relative;
 }
 
-#footerLastDiv{
+#d1{
     position: absolute;
+    width: fit-content;
+}
+
+.viewWidth{
     width: 98vw;
-    height: 10px;
-    top: 4%;
+    height: 8vh;
 }
 
-
-/*card animation*/
-
-.card-container, .front, .back {
-    width: 20rem;
-    height: 10rem;
-}
-.card-container {
-    margin: 5px;
-}
-.front, .back {
-    box-sizing: border-box;
-    padding: 20px;
-    border-radius: 4px;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .25);
-
-    font-family: BlinkMacSystemFont, "Segoe UI", sans-serif;
-    font-size: 2rem;
-    color: #fff;
-    text-align: center;
+section p{
+    margin: 0;
 }
 
-.back {
-    background-image: linear-gradient(to right bottom, #590067, #590067);
-    width: 322px;
-    height: 162px;
+@media only screen and (max-width: 568px) {
 
-    font-size: 22px;
-    -webkit-text-fill-color: white;
-    font-weight: normal;
-    text-align: center;
+    /*  Header    */
+
+    .headerPosition{
+        position: relative;
+        left: 194px;
+        top: 10px;
+    }
+
+    .profile{
+        width: 63px;
+        height: 63px;
+
+        border-radius: 100%;
+        border: 5px solid darkblue;
+        margin: 0;
+        padding: 0;
+
+        position: relative;
+        top: -2px;
+        left: 0;
+    }
+
+    /*    footer    */
+    #mainDivF{
+        width: 100vw;
+        height: 65vh;
+        margin: 0;
+        background-color: #3A0044;
+
+        position: relative;
+        top: 98px;
+    }
+
+    #aboutUs{
+        -webkit-text-fill-color: white;
+        position: absolute;
+        top: 2%;
+        left: 37%;
+    }
+
+    #fDiv1{
+        -webkit-text-fill-color: white;
+        position: absolute;
+        top: 25%;
+        left: 3%;
+    }
+
+    #fDiv2{
+        -webkit-text-fill-color: white;
+        position: absolute;
+        top: 25%;
+        left: 30%;
+    }
+
+    #fDiv3{
+        -webkit-text-fill-color: white;
+        position: absolute;
+        top: 25%;
+        left: 58%;
+
+        width: fit-content;
+    }
+
+    #allRights{
+        position: absolute;
+        top: 93%;
+        left: 25%;
+        -webkit-text-fill-color: white;
+        font-size: 15px;
+    }
+
+    #groStore{
+        position: absolute;
+        top: 80%;
+        left: 75%;
+        -webkit-text-fill-color: white;
+
+        font-size: 25px;
+    }
+
+    #socialMedia{
+        position: absolute;
+        top: 80%;
+        left: 3%;
+    }
+
+    #facebook{
+        width: 37px;
+        aspect-ratio: 1/1;
+
+        position: relative;
+    }
+
+    #instagram{
+        width: 25px;
+        aspect-ratio: 1/1;
+
+        position: relative;
+        left: 10px;
+    }
+
+    #whatsapp{
+        width: 24px;
+        aspect-ratio: 1/1;
+
+        position: relative;
+        left: 28px;
+    }
+
+    /*  order Table Button  */
+
+    .OrderTitle{
+        position: absolute;
+        top: 89px;
+        left: 15px;
+    }
+
+    .titleSmallSize{
+        font-size: 15px;
+    }
+
+    #viewOrderBtnParent{
+        position: relative;
+        top: 84px;
+        left: 20px;
+        width: fit-content;
+    }
 }
 
-.card-container {
-    position: relative;
-}
-.front, .back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    backface-visibility: hidden;
-    overflow: hidden;
-    transition: transform .8s ease;
-}
-.back {
-    transform: rotateY(180deg);
-}
-.card-container:hover .front {
-    transform: rotateY(-180deg);
-}
-.card-container:hover .back {
-    transform: rotateY(0deg);
-}
-
-.card-container {
-    perspective: 75rem;
-}
