--- a/assets/stylesheet/dashboardCSSFile.css
+++ b/assets/stylesheet/dashboardCSSFile.css
@@ -277,6 +277,43 @@ section p{
     padding: 0!important;
 }
 
+/*modal*/
+.updateTitleOrder{
+    position: absolute;
+    top: 15px;
+    left: 25%;
+}
+
+#line1UpdateOrder{
+    width: 230px;
+    height: 1px;
+    background-color: gray;
+
+    position: relative;
+    top: -20px;
+    left: 9rem;
+}
+
+.subTotal{
+
+}
+
+.discount{
+
+}
+
+.balance{
+
+}
+
+.textAlignRight{
+    text-align: right;
+}
+
+.textAlignCenter{
+    text-align: center;
+}
+
 @media only screen and (max-width: 568px) {
 
     /*  Header    */
