--- a/assets/stylesheet/loginCSSFile.css
+++ b/assets/stylesheet/loginCSSFile.css
@@ -19,3 +19,15 @@
 
     opacity: 100%;
 }
+
+#signUpParent{
+    position: relative;
+    top: -33rem;
+    left: 50vw;
+}
+
+#signUp{
+    text-align: right;
+    padding-right: 20px;
+    -webkit-text-fill-color: #590067;
+}
