--- a/assets/stylesheet/dashboardCSSFile.css
+++ b/assets/stylesheet/dashboardCSSFile.css
@@ -1,3 +1,47 @@
+#profileDropdown{
+    width: 75px;
+    position: relative;
+    left: 160px;
+}
+
+#dropdownList{
+    width: 250px;
+    height: 400px;
+}
+
+#dropdownImage{
+
+    width: 170px;
+    height: 150px;
+
+    border-radius: 100%;
+    position: relative;
+    left: 39px;
+}
+
+.textAlignCenter{
+    text-align: center;
+}
+
+.profileDetail{
+    -webkit-text-fill-color: gray;
+    position: relative;
+    left: 60px;
+}
+
+.signup{
+    -webkit-text-fill-color: #0066FF;
+    margin-top: 20px;
+}
+
+.logout{
+    text-align: center;
+    -webkit-text-fill-color: #590067;
+    font-weight: bold;
+
+    margin-bottom: 20px;
+}
+
 .headerPosition{
     position: relative;
     left: 278px;
@@ -9,13 +53,12 @@
     height: 75px;
 
     border-radius: 100%;
-    /*border: 5px solid darkblue;*/
     margin: 0;
     padding: 0;
 
     position: relative;
     top: -15px;
-    left: 322px;
+    left: 174px;
 }
 
 .card{
