header title animation

--- a/assets/stylesheet/dashboardCSSFile.css
+++ b/assets/stylesheet/dashboardCSSFile.css
@@ -1,3 +1,9 @@
+@import 'https://fonts.googleapis.com/css?family=Raleway';
+
+#DashGroStore{
+    font-size: 30px;
+}
+
 #DashGroStore{
     -webkit-text-fill-color: #590067;
     font-weight: bold;
@@ -6,7 +12,7 @@
 #profileDropdown{
     width: 75px;
     position: relative;
-    left: 160px;
+    left: -50px;
 }
 
 #dropdownList{
@@ -50,7 +56,7 @@
 
 .headerPosition{
     position: relative;
-    left: 278px;
+    left: 180px;
     top: 15px;
 }
 
@@ -64,7 +70,7 @@
 
     position: relative;
     top: -15px;
-    left: 174px;
+    left: 160px;
 }
 
 /*----------------------------------------------------------------------------------------------------------*/
@@ -363,4 +369,58 @@ section p{
 
 .textAlignCenter{
     text-align: center;
+}
+
+/*header title animation*/
+div.container
+{
+    font-family: Raleway;
+    margin: 0 auto;
+    padding: 1em 3em;
+    text-align: center;
+}
+
+div.container a
+{
+    color: #FFF;
+    text-decoration: none;
+    font: 20px Raleway;
+    margin: 0px 10px;
+    padding: 10px 10px;
+    position: relative;
+    z-index: 0;
+    cursor: pointer;
+}
+
+/* Top and Bottom borders come in */
+div.topBotomBordersIn a:before, div.topBotomBordersIn a:after
+{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #590067;
+    content: "";
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+
+
+div.topBotomBordersIn a:before
+{
+    top: -5px;
+    transform: translateY(-10px);
+}
+
+div.topBotomBordersIn a:after
+{
+    bottom: 25px;
+    transform: translateY(10px);
+}
+
+div.topBotomBordersIn a:hover:before, div.topBotomBordersIn a:hover:after
+{
+    opacity: 1;
+    transform: translateY(0px);
 }
