--- a/assets/stylesheet/signupPage.css
+++ b/assets/stylesheet/signupPage.css
@@ -6,12 +6,12 @@
 
 #inputField{
     position: relative;
-    top: -4rem;
+    top: -5rem;
 }
 
 #logoParent{
     position: absolute;
-    left: 16rem;
+    left: 15.5rem;
 }
 
 #logo{
@@ -21,6 +21,40 @@
 
 #signupLabel{
     position: absolute;
-    top: 10rem;
-    left: 15.5rem;
+    top: 9rem;
+    left: 15rem;
+}
+
+#parent{
+    height: 568px;
+    position: relative;
+    top: 0;
+}
+
+#position{
+    width: 675px;
+    position: relative;
+    left: 670px;
+    top: -550px;
+}
+
+#signUp{
+    position: absolute;
+    left: 0px;
+    top: 15px;
+    font-size: 25px;
+}
+
+#loginBtn{
+    position: absolute;
+    top: -30px;
+    left: 0px;
+}
+
+#imageParent{
+    height: 580px;
+}
+
+.loginImage{
+    height: 598.8px;
 }
