--- a/assets/stylesheet/buttonAnmation.css
+++ b/assets/stylesheet/buttonAnmation.css
@@ -309,3 +309,44 @@
 }
 
 /*customer new button*/
+.btn-new:before,
+.btn-new:after {
+
+    /*right-bottom border color*/
+    position: absolute;
+    content: "";
+    right: 258px;
+    bottom: 0;
+    background-color:#03A100;
+    box-shadow:
+            -7px -7px 20px 0px rgba(255,255,255,.9),
+            -4px -4px 5px 0px rgba(255,255,255,.9),
+            7px 7px 20px 0px rgba(0,0,0,.2),
+            4px 4px 5px 0px rgba(0,0,0,.3);
+    transition: all 0.3s ease;
+}
+
+.btn-new span:before,
+.btn-new span:after {
+    /*top-left border color*/
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    background-color: #03A100;
+    box-shadow:
+            -7px -7px 20px 0px rgba(255,255,255,.9),
+            -4px -4px 5px 0px rgba(255,255,255,.9),
+            7px 7px 20px 0px rgba(0,0,0,.2),
+            4px 4px 5px 0px rgba(0,0,0,.3);
+    transition: all 0.3s ease;
+}
+
+.newBtn-color{
+    background-color: #03A100;
+}
+
+.btn-new:hover:after {
+    width: 30%;
+}
+
