link visited after apply color

--- a/assets/stylesheet/dashboardCSSFile.css
+++ b/assets/stylesheet/dashboardCSSFile.css
@@ -1,4 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Raleway';
+a:visited{
+    color: #FBDFFF;
+}
 
 #DashGroStore{
     font-size: 30px;
