--- a/assets/stylesheet/dashboardCSSFile.css
+++ b/assets/stylesheet/dashboardCSSFile.css
@@ -61,24 +61,24 @@ a:link{
     margin-bottom: 20px;
 }
 
-.headerPosition{
-    position: relative;
-    left: 152px;
-    top: 0px;
-}
+/*.headerPosition{*/
+/*    position: relative;*/
+/*    left: 100px;*/
+/*    top: 0px;*/
+/*}*/
 
-.profile{
-    width: 78px;
-    height: 75px;
+/*.profile{*/
+/*    width: 78px;*/
+/*    height: 75px;*/
 
-    border-radius: 100%;
-    margin: 0;
-    padding: 0;
+/*    border-radius: 100%;*/
+/*    margin: 0;*/
+/*    padding: 0;*/
 
-    position: relative;
-    top: 0px;
-    left: 165px;
-}
+/*    position: relative;*/
+/*    top: 0px;*/
+/*    left: 165px;*/
+/*}*/
 
 /*----------------------------------------------------------------------------------------------------------*/
 .fonts{
