--- a/assets/stylesheet/placeOrderCSSFile.css
+++ b/assets/stylesheet/placeOrderCSSFile.css
@@ -5,6 +5,7 @@
 }
 
 .titleOrder{
+    z-index: -1;
     position: absolute;
     top: 22%;
 }
@@ -67,6 +68,7 @@
 
     position: relative;
     top: 7rem;
+    z-index: -1;
 }
 
 .itemsDetails{
