--- a/assets/stylesheet/placeOrderCSSFile.css
+++ b/assets/stylesheet/placeOrderCSSFile.css
@@ -7,7 +7,12 @@
 .titleOrder{
     z-index: -1;
     position: absolute;
-    top: 22%;
+    top: 15%;
+    left: 14%;
+}
+
+#bill{
+    top: 125px;
 }
 
 #line1{
