--- a/assets/stylesheet/customerManageCSSFile.css
+++ b/assets/stylesheet/customerManageCSSFile.css
@@ -19,25 +19,29 @@
     width:200px;
 }
 
-.newButton{
+.buttons{
     margin-right: 15px;
     width: 110px;
     border-radius: 7px;
     font: 15px Raleway;
 }
 
-.updateButton{
-    margin-right: 15px;
-    width: 110px;
-    border-radius: 7px;
-    font: 15px Raleway;
-}
+/*.newButton{*/
+/*   */
+/*}*/
 
-.removeButton{
-    width: 110px;
-    border-radius: 7px;
-    font: 15px Raleway;
-}
+/*.updateButton{*/
+/*    margin-right: 15px;*/
+/*    width: 110px;*/
+/*    border-radius: 7px;*/
+/*    font: 15px Raleway;*/
+/*}*/
+
+/*.removeButton{*/
+/*    width: 110px;*/
+/*    border-radius: 7px;*/
+/*    font: 15px Raleway;*/
+/*}*/
 
 .whiteTextColor{
     -webkit-text-fill-color: white;
