--- a/assets/stylesheet/dashboardCSSFile.css
+++ b/assets/stylesheet/dashboardCSSFile.css
@@ -22,12 +22,12 @@ a:link{
     left: -20px;
 }
 
-#dropdownList{
-    width: 250px;
-    height: 400px;
-    position: absolute;
-    left: 9rem;
-}
+/*#dropdownList{*/
+/*    width: 250px;*/
+/*    height: 400px;*/
+/*    position: absolute;*/
+/*    left: 9rem;*/
+/*}*/
 
 #dropdownImage{
 
